added contacts page, worked with seo, updated html and css structures

--- a/work.html
+++ b/work.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Works of Oleksandra Mishchenko</title>
-    <meta name="description" content="About" />
+    <meta
+      name="description"
+      content="Check out all existing project of Oleksandra Mishchenko -  a beginner front-end developer"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,6 +18,10 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/f8fcf0ba93.js"
       crossorigin="anonymous"
     ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -28,7 +35,7 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky-top bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
           <img
             src="media/cat-icon.png"
             alt=""
@@ -52,7 +59,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about.html">About</a>
@@ -77,20 +84,64 @@
           <div class="col-lg-6 mb-3">
             <img src="media/takoyaki.png" alt="" class="img-fluid rounded" />
             <h3 class="m-0">Takoyaki Project</h3>
-            <p class="text-muted p-0">Built with HTML and CSS</p>
+            <p class="text-muted p-0">Built with HTML, CSS and JavaScript</p>
           </div>
           <div class="col-lg-6 mb-3">
             <img src="media/weather.png" alt="" class="img-fluid rounded" />
             <h3 class="m-0">Weather Project</h3>
-            <p class="text-muted p-0">Built with HTML, CSS and JS</p>
+            <p class="text-muted p-0">
+              Built using HTML, an active API, and advanced CSS and JavaScript
+            </p>
           </div>
           <div class="col-lg-6 mb-3">
             <img src="media/cinema.png" alt="" class="img-fluid rounded" />
             <h3 class="m-0">Cinema Project</h3>
-            <p class="text-muted p-0">Built with HTML, CSS and JS</p>
+            <p class="text-muted p-0">Built with HTML, CSS and JavaScript</p>
           </div>
         </div>
       </div>
+      <!-- Footer  -->
+      <footer>
+        <div
+          class="contact-box justify-content-between align-items-center mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="mb-0 text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="/contacts.html" class="btn btn-branding-outline mb-4">
+              Contact me
+            </a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:mishchenko.oleksandra21@gmail.com" class="email-link">
+            mishchenko.oleksandra21@gmail.com
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://github.com/Morikachan/sc-portfolio-page"
+            target="_blank"
+            title="GitHub Profile"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/oleksandra-mishchenko-33497b245/"
+            target="_blank"
+            title="Linkedin Profile"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a
+            href="https://t.me/olegknyazlove"
+            target="_blank"
+            title="Telegram Profile"
+          >
+            <i class="fa-brands fa-telegram"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
