--- a/about.html
+++ b/about.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Oleksandra Mishchenko</title>
-    <meta name="description" content="About" />
+    <meta
+      name="description"
+      content="About Oleksandra Mishchenko -  a beginner front-end developer."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,6 +18,10 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/f8fcf0ba93.js"
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./src/style.css" />
@@ -29,7 +36,7 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky-top bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
           <img
             src="media/cat-icon.png"
             alt=""
@@ -53,7 +60,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/about.html"
@@ -78,22 +85,68 @@
             <h1 class="mb-4">Hi I am <br />Oleksandra Mishchenko</h1>
             <h2 class="mb-4">Frontend Developer, based in Japan.</h2>
             <p class="mb-4">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+              I'm currently a 2nd year student at the National Technical
+              University of Ukraine “Igor Sikorsky Kyiv Polytechnic Institute”.
+              I’m seeking new opportunities in front-end development. I’m open
+              to working remotely and have flexible hours. I’m highly skilled in
+              JavaScript and React.
             </p>
-            <a href="" class="btn btn-branding-outline mb-3">See my projects</a>
+            <a href="/work.html" class="btn btn-branding-outline mb-3"
+              >See my projects</a
+            >
           </div>
         </div>
-        <div class="col-lg-5 about-section-img">
+        <div class="col-lg-5">
           <img
             src="media/prof-photo-2.jpg"
             alt=""
-            class="img-fluid rounded-4"
+            class="img-fluid rounded-4 d-lg-block d-none"
           />
         </div>
       </div>
+
+      <!-- Footer  -->
+      <footer>
+        <div
+          class="contact-box justify-content-between align-items-center mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="mb-0 text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="/contacts.html" class="btn btn-branding-outline mb-4">
+              Contact me
+            </a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:mishchenko.oleksandra21@gmail.com" class="email-link">
+            mishchenko.oleksandra21@gmail.com
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://github.com/Morikachan/sc-portfolio-page"
+            target="_blank"
+            title="GitHub Profile"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/oleksandra-mishchenko-33497b245/"
+            target="_blank"
+            title="Linkedin Profile"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a
+            href="https://t.me/olegknyazlove"
+            target="_blank"
+            title="Telegram Profile"
+          >
+            <i class="fa-brands fa-telegram"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
