--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Homepage of a beginner front-end developer - Oleksandra Mishchenko. Check out the list of projects and feel free to contact her."
+      content="Homepage of a beginner frontend developer - Oleksandra Mishchenko. Check out the list of projects and feel free to contact her."
     />
-    <title>Homepage - Oleksandra Mishchenko</title>
+    <title>Frontend developer - Oleksandra Mishchenko</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,6 +18,10 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/f8fcf0ba93.js"
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./src/style.css" />
@@ -31,7 +35,7 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky-top bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
           <img
             src="media/cat-icon.png"
             alt=""
@@ -55,7 +59,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about.html">About</a>
@@ -82,8 +86,8 @@
               🇯🇵
             </h3>
             <div class="btn-links mt-5">
-              <a href="" class="btn shadow">My Work</a>
-              <a href="" class="btn shadow">Contact Me</a>
+              <a href="/work.html" class="btn shadow">My Work</a>
+              <a href="/contacts.html" class="btn shadow">Contact Me</a>
             </div>
           </div>
           <div class="col-md-4">
@@ -110,12 +114,18 @@
         <div class="col-md-6 px-4">
           <h2 class="mt-3">Weather app</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
+            Weather application with the usage of OpenWeather API. On this page,
+            you can search for Weather Forecast up to 5 days from different
+            cities all over the world. Also provided current weather state with
+            detailed information.
           </p>
-          <a href="" class="btn btn-branding-outline mb-4"> Learn more </a>
+          <a
+            href="https://leafy-granita-8d9104.netlify.app/"
+            class="btn btn-branding-outline mb-4"
+            target="_blank"
+          >
+            Learn more
+          </a>
         </div>
       </div>
 
@@ -123,12 +133,18 @@
         <div class="col-md-6 px-5">
           <h2 class="mb-3">Cinema app</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
+            First university group coursework. Page with 5 different films.
+            After the movie has been selected, the selection of the desired
+            viewing seat will appear. Then you can go to the page of the movie
+            itself.
           </p>
-          <a href="" class="btn btn-branding-outline mb-4"> Learn more </a>
+          <a
+            href="https://github.com/Morikachan/Cinema-Hall"
+            class="btn btn-branding-outline mb-4"
+            target="_blank"
+          >
+            Learn more
+          </a>
         </div>
 
         <div class="col-md-6">
@@ -139,6 +155,48 @@
           />
         </div>
       </div>
+      <!-- Footer  -->
+      <footer>
+        <div
+          class="contact-box justify-content-between align-items-center mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="mb-0 text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="/contacts.html" class="btn btn-branding-outline mb-4">
+              Contact me
+            </a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:mishchenko.oleksandra21@gmail.com" class="email-link">
+            mishchenko.oleksandra21@gmail.com
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://github.com/Morikachan/sc-portfolio-page"
+            target="_blank"
+            title="GitHub Profile"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/oleksandra-mishchenko-33497b245/"
+            target="_blank"
+            title="Linkedin Profile"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a
+            href="https://t.me/olegknyazlove"
+            target="_blank"
+            title="Telegram Profile"
+          >
+            <i class="fa-brands fa-telegram"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
