added link to repository

--- a/work.html
+++ b/work.html
@@ -122,7 +122,7 @@
         </div>
         <div class="social-links d-flex justify-content-center">
           <a
-            href="https://github.com/Morikachan/sc-portfolio-page"
+            href="https://github.com/Morikachan"
             target="_blank"
             title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
@@ -141,6 +141,16 @@
             <i class="fa-brands fa-telegram"></i>
           </a>
         </div>
+        <p class="text-center mt-5">
+          This website was coded by Oleksandra Mishchenko, and is
+          <a
+            href="https://github.com/Morikachan/sc-portfolio-page"
+            target="_blank"
+            title="Repository link"
+          >
+            open-sourced
+          </a>
+        </p>
       </footer>
     </div>
   </body>
